[gd_scene load_steps=17 format=3 uid="uid://dfw1rr56lbuk6"]

[ext_resource type="PackedScene" uid="uid://dbk0lrs3vdn38" path="res://worlds/counting/building.tscn" id="1_dish6"]
[ext_resource type="Script" path="res://worlds/counting/new_counting_world.gd" id="1_q1v27"]
[ext_resource type="Texture2D" uid="uid://b2mjrvijn6600" path="res://worlds/counting/assets/map rework_3.png" id="1_vx1y3"]
[ext_resource type="Texture2D" uid="uid://kec7galqlvje" path="res://worlds/counting/assets/prop1.png" id="2_djukd"]
[ext_resource type="Texture2D" uid="uid://cifrxmwoakecq" path="res://worlds/counting/assets/prop2.png" id="3_bvao5"]
[ext_resource type="Texture2D" uid="uid://dnr60mnj7kxkh" path="res://worlds/counting/assets/prop3.png" id="4_y5dd3"]
[ext_resource type="Texture2D" uid="uid://b1v2fx5kw25rw" path="res://worlds/counting/assets/prop8.png" id="5_ix5g3"]
[ext_resource type="Texture2D" uid="uid://dg121hipct72r" path="res://worlds/counting/assets/Number Squid 500x500.png" id="6_3b8yq"]
[ext_resource type="Texture2D" uid="uid://ducxhbex34vh1" path="res://worlds/counting/assets/Jellyfish.png" id="7_egpmc"]
[ext_resource type="Texture2D" uid="uid://b00ubtucnr2bd" path="res://worlds/counting/assets/bee.png" id="7_g4plc"]
[ext_resource type="Texture2D" uid="uid://da0lelxl54l5k" path="res://worlds/counting/assets/Sky_mountain.png" id="9_aitba"]
[ext_resource type="Texture2D" uid="uid://21gl7823mguc" path="res://worlds/counting/assets/pyramid snake.png" id="9_b8wtg"]
[ext_resource type="Texture2D" uid="uid://5yl0vyfo5s8n" path="res://worlds/counting/assets/House.png" id="10_fri3p"]
[ext_resource type="Texture2D" uid="uid://sxrvjwft5ciu" path="res://worlds/counting/assets/turtle.png" id="12_jjsuv"]
[ext_resource type="Texture2D" uid="uid://cx7tljd1a23us" path="res://worlds/counting/assets/Spaceship.png" id="12_r1suf"]
[ext_resource type="Texture2D" uid="uid://dehadbktfsy0q" path="res://worlds/counting/assets/snake 2.png" id="12_tpd6q"]

[node name="NewCountingWorld" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_q1v27")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_vx1y3")
centered = false

[node name="Building" parent="." instance=ExtResource("1_dish6")]
z_index = 1
layout_mode = 0
offset_left = 229.0
offset_top = 791.0
offset_right = 838.0
offset_bottom = 1149.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("2_djukd")
minigame_path = "res://minigames/counting/amount_0_to_9/amount_0_to_9.tscn"

[node name="Building2" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 942.0
offset_top = 705.0
offset_right = 1628.0
offset_bottom = 1197.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_bvao5")
minigame_path = "res://minigames/counting/amount_0_to_99/amount_0_to_99.tscn"

[node name="Building3" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 1293.0
offset_top = 565.0
offset_right = 2171.0
offset_bottom = 1239.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_y5dd3")
minigame_path = "res://minigames/counting/amount_0_to_999/amount_0_to_999.tscn"

[node name="Building4" parent="." instance=ExtResource("1_dish6")]
z_index = 1
layout_mode = 0
offset_left = 153.0
offset_top = 508.0
offset_right = 1139.0
offset_bottom = 1182.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_3b8yq")
minigame_path = "res://minigames/counting/num_line_0_to_9/num_line_0_to_9.tscn"

[node name="Building5" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 117.0
offset_top = 197.0
offset_right = 995.0
offset_bottom = 977.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("7_g4plc")
minigame_path = "res://minigames/counting/falling_numbers_0_to_9/falling_numbers_0_to_9.tscn"

[node name="Building6" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 442.0
offset_top = 24.0
offset_right = 1320.0
offset_bottom = 787.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("7_egpmc")
minigame_path = "res://minigames/counting/num_line_0_to_100/num_line_0_to_100.tscn"

[node name="Building7" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 671.0
offset_top = 199.0
offset_right = 1712.0
offset_bottom = 1262.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_aitba")
minigame_path = "res://minigames/counting/run_hill_0_to_100/run_hill_0_to_100.tscn"

[node name="Building8" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 471.0
offset_top = 614.0
offset_right = 1349.0
offset_bottom = 1288.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_ix5g3")
minigame_path = "res://minigames/counting/match_0_to_9/match_0_to_9.tscn"

[node name="Building9" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 711.0
offset_top = 817.0
offset_right = 1589.0
offset_bottom = 1491.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_b8wtg")
minigame_path = "res://minigames/counting/snake_0_to_9/snake_0_to_9.tscn"

[node name="Building13" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 1093.0
offset_top = 335.0
offset_right = 1971.0
offset_bottom = 1311.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("12_tpd6q")
minigame_path = "res://minigames/counting/snake_10_to_99/snake_10_to_99.tscn"

[node name="Building10" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 1576.0
offset_top = 352.0
offset_right = 2454.0
offset_bottom = 1238.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("10_fri3p")
minigame_path = "res://minigames/counting/make_amounts_1_to_999/make_amounts_1_to_999.tscn"

[node name="Building11" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 723.0
offset_top = 535.0
offset_right = 1780.0
offset_bottom = 1575.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("12_jjsuv")
minigame_path = "res://minigames/counting/make_amounts_1_to_99/make_amounts_1_to_99.tscn"

[node name="Building12" parent="." instance=ExtResource("1_dish6")]
visible = false
z_index = 1
layout_mode = 0
offset_left = 340.0
offset_top = 386.0
offset_right = 1218.0
offset_bottom = 1189.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("12_r1suf")
minigame_path = "res://minigames/counting/number_bridge_0_to_9/number_bridge_0_to_9.tscn"
